Fixes centered alignment CSS inheritance issue for IE with the new multicheckboxtable form item's headers. CS-6081

--- a/css/form.css
+++ b/css/form.css
@@ -137,6 +137,7 @@ table.multicheckbox {
 	cursor: default;
 	border-bottom: 1px solid #d3d3d3;
 	font-weight: bold;
+	text-align: left;
 }
 .feedcategoryselector tbody td:first-child{
 	width: 20px;
